<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallpaper Info</string>
    <string name="hello_world">Wallpaper Info by Brad Park!</string>
    <string name="action_settings">Settings</string>
    <string name="app_widget_4_1">Wallpaper Widget 4x1</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="waiting">Waiting for the first wallpaper.</string>
    <string name="openfile">Open File</string>
    <string name="root_path">Select folder to browse</string>
    <string name="select_folder">"\u23CF"</string>
    <string name="sync">"\u267A"</string>
    <string name="pause">"\u23F8"</string>
    <string name="resume">\u25B6"</string>
    <string name="start">"\u25C9"</string>
    <string name="stop">"\u25FC"</string>
    <string name="filterset">"\u2699"</string>
    <string name="name">Name</string>
    <string name="custom">Custom</string>
    <string name="filter_string"></string>
    <string name="delete">"🗑"</string>
    <string name="previous">"\u23EA"</string>
    <string name="next">"\u23E9"</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="library">Save to Library</string>
    <string name="root">Root</string>
    <string name="allow">Allow</string>
    <string name="filter">Filter</string>
    <string name="reserved">Reserved</string>

</resources>
