<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/root_path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:text="@string/root_path" />
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/galleryCopy"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="🖼" />

            <Button
                android:id="@+id/chooseDirButton"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_folder" />

            <Button
                android:id="@+id/syncButton"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/theme"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/saverCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:text="Saver" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp">
            <SeekBar
                android:id="@+id/interval"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/max_interval"
                android:progress="@integer/default_interval" />
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/interval_min_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:text="min" />
                <TextView
                    android:id="@+id/interval_max_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="max" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="2dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="2dp">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFFFFF"
            android:src="@drawable/thirdwave" />
        <ImageView
            android:id="@+id/shareImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#80FFFFFF"
            android:src="@drawable/share" />
        <ImageView
            android:id="@+id/castImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:layout_marginTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#80FFFFFF"
            android:src="@drawable/cast" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginRight="100dp"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/customLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/custom" />
            <EditText
                android:id="@+id/custom_config_string"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:textSize="11sp"
                android:gravity="center_vertical"
                android:imeOptions="actionDone"
                android:text="@string/filter_string" />
        </LinearLayout>
        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/custom_config_set"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/filterset" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentLeft="true"
            android:id="@+id/startStopButton"
            style="@android:style/Widget.Button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/toast_frame"
            android:backgroundTint="#F6B4B4"
            android:text="@string/start" />
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/previousButton"
                style="@android:style/Widget.Button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/previous" />
            <Button
                android:id="@+id/pauseButton"
                style="@android:style/Widget.Button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pause" />
            <Button
                android:id="@+id/nextButton"
                style="@android:style/Widget.Button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/last_used_paths_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:headerDividersEnabled="true" />
</LinearLayout>



