<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="390dp"
    android:layout_height="100dp"
    android:alpha="10"
    android:background="#60000000"
    android:focusable="true">

    <ImageView
        android:id="@+id/image_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="1dp"
        android:contentDescription="@string/openfile"
        android:minWidth="@dimen/widget_image_height"
        android:minHeight="@dimen/widget_image_height"
        android:src="@drawable/thirdwave" />

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerVertical="@+id/folder_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/image_thumbnail"
        android:contentDescription="@string/action_settings"
        android:scaleType="fitCenter"
        android:src="@drawable/thirdwave" />
        
    <TextView
        android:id="@+id/folder_text"
        style="@style/WidgetFolder"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_thumbnail"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/image_thumbnail"
        android:text="@string/scanning" />

    <TextView
        android:id="@+id/image_text"
        style="@style/WidgetImage"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/folder_text"
        android:layout_alignLeft="@+id/setting_button"
        android:layout_marginTop="10dp"
        android:text="@string/waiting" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerVertical="@+id/folder_text"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/folder_text"
        android:contentDescription="@string/openfile"
        android:scaleType="fitCenter"
        android:src="@drawable/gtk_media_forward_rtl" />

    <ImageView
        android:id="@+id/pause_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerVertical="@+id/folder_text"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/back_button"
        android:contentDescription="@string/openfile"
        android:scaleType="fitCenter"
        android:src="@drawable/gtk_media_play_ltr" />

    <ImageView
        android:id="@+id/forward_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerVertical="@+id/folder_text"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/pause_button"
        android:contentDescription="@string/openfile"
        android:scaleType="fitCenter"
        android:src="@drawable/gtk_media_forward_ltr" />

</RelativeLayout>