<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/libraryButton"
                style="@android:style/Widget.Button"
                android:layout_alignParentLeft="true"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/library" />
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/addcustomconfig"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/clearcustomconfig"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />
            </LinearLayout>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/themelib_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/border"
            android:headerDividersEnabled="true" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customwords_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/border"
            android:headerDividersEnabled="true" />
    </LinearLayout>
</LinearLayout>
